[package]
name = "pullover-dyn"
version = "0.1.0"
authors = ["Nguyễn Tuấn Anh <ubolonton@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies.emacs]
version = "0.8.0"
path = "../emacs-module-rs"

[dependencies.objc]
version = "0.2.6"
features = ["exception"]

[dependencies]
lazy_static = "1.3.0"
cocoa = "0.18.4"
#core-foundation = "0.6.4"
