[package]
name = "pullover"
version = "0.1.0"
authors = ["Nguyễn Tuấn Anh <ubolonton@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
name = "pullover_dyn"
crate-type = ["cdylib"]

[[bin]]
path = "src/bin.rs"
name = "pullover-bin"

[dependencies.emacs]
version = "0.8.0"
path = "../emacs-module-rs"

[dependencies.objc]
version = "0.2.6"
features = ["exception"]

[dependencies]
lazy_static = "1.3.0"
cocoa = "0.18.4"

[profile.release]
opt-level = 3
lto = "thin"